--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE  html>
 <html><head>
     <meta charset="utf-8" />
-    <title><!-- TODO --></title>
+    <title>Shock Work</title>
     <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/materialize.min.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="js/lib/require.js" data-main="js/main"></script>
 </head><body>
     <div id="page"></div>
