--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,6 +6,11 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" />
     <script src="js/lib/require.js" data-main="js/main"></script>
+
+    <link href="css/game/reset.css" rel="stylesheet"/>
+    <link href="css/game/style.css" rel="stylesheet"/>
+    <link href="css/game/template.css" rel="stylesheet"/>
+    <link href="css/game/jquery-ui.css" rel="stylesheet"/>
 </head><body>
     <div id="page"></div>
 </body></html>
