--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,6 +6,12 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" />
     <script src="js/lib/require.js" data-main="js/main"></script>
+    <script src="js/webcam.js" data-main="js/main"></script>
 </head><body>
     <div id="page"></div>
+    <video id="video" width="640" height="480" autoplay></video>
+    <button id="snap">Сделать фото</button>
+    <canvas id="canvas" width="640" height="480"></canvas>
+
+
 </body></html>
