--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE  html>
-<html><head>
-    <meta charset="utf-8" />
+<html>
+<head>
+    <meta charset="utf-8"/>
     <title>Shock Work</title>
-    <link rel="stylesheet" href="css/materialize.min.css" />
+    <link rel="stylesheet" href="css/materialize.min.css"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/loader.css" />
+    <link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="css/loader.css"/>
     <script src="js/lib/require.js" data-main="js/main"></script>
-    <!--<script src="js/webcam.js" data-main="js/main"></script>-->
-</head><body>
+</head>
+<body>
     <div id="page"></div>
-   <!-- <video id="video" width="640" height="480" autoplay></video>
-    <button id="snap">Сделать фото</button>
-    <canvas id="canvas" width="640" height="480"></canvas>-->
-
-
-</body></html>
+</body>
+</html>
