--- a/public_html/index.html
+++ b/public_html/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/materialize.min.css"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css"/>
+    <link rel="stylesheet" href="css/sweetalert.css"/>
     <link rel="stylesheet" href="css/loader.css"/>
     <script src="js/lib/require.js" data-main="js/main"></script>
 </head>
