--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,13 +3,19 @@
 <head>
     <meta charset="utf-8"/>
     <title>Shock Work</title>
+    <link rel="stylesheet" href="css/loader.css"/>
     <link rel="stylesheet" href="css/materialize.min.css"/>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css"/>
-    <link rel="stylesheet" href="css/loader.css"/>
-    <script src="js/lib/require.js" data-main="js/main"></script>
 </head>
 <body>
+    <div id="loader-wrapper">
+        <div id="loader"></div>
+
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
+    </div>
     <div id="page"></div>
+    <script src="js/lib/require.js" data-main="js/main"></script>
 </body>
 </html>
