--- a/public_html/index.html
+++ b/public_html/index.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="css/main.css"/>
 </head>
 <body>
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            document.getElementsByTagName('body')[0].className = 'loaded';
+        });
+    </script>
     <div id="loader-wrapper">
         <div id="loader"></div>
 
