--- a/public_html/index.html
+++ b/public_html/index.html
@@ -22,5 +22,8 @@
     </div>
     <div id="page"></div>
     <script src="js/lib/require.js" data-main="js/main"></script>
+    <script>
+        document.getElementsByTagName('body')[0].className = '';
+    </script>
 </body>
 </html>
