--- a/public_html/index.html
+++ b/public_html/index.html
@@ -10,8 +10,21 @@
     <link rel="stylesheet" href="css/sweetalert.css"/>
 </head>
 <body>
-    <div id="page"></div>
-    <script src="js/lib/require.js" data-main="js/main"></script>
-    
+	<script>
+	window.addEventListener("load", function() {
+		document.getElementsByTagName('body')[0].className = 'loaded';
+	});
+	</script>
+	<div id="loader-wrapper">
+		<div id="loader"></div>
+
+		<div class="loader-section section-left"></div>
+		<div class="loader-section section-right"></div>
+	</div>
+	<div id="page"></div>
+	<script src="js/lib/require.js" data-main="js/main"></script>
+	<script>
+		document.getElementsByTagName('body')[0].className = '';
+	</script>
 </body>
 </html>
