--- a/public_html/index.html
+++ b/public_html/index.html
@@ -21,6 +21,6 @@
 		<div class="loader-section section-right"></div>
 	</div>
 	<div id="page"></div>
-	<script src="js/build.min.js"></script>
+	<script src="js/build.js"></script>
 </body>
 </html>
