--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,10 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>Shock Work</title>
-    <link rel="stylesheet" href="css/build.min.css"/>
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
+    <title>Mastodonts Mail Group</title>
+    <link rel="stylesheet" href="/css/build.min.css"/>
 </head>
 <body>
 	<script>
@@ -21,6 +19,6 @@
 		<div class="loader-section section-right"></div>
 	</div>
 	<div id="page"></div>
-	<script src="js/build.js"></script>
+	<script src="/js/build.min.js"></script>
 </body>
 </html>
